# wiremann

./: Cargo.toml  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release.yml
package/inno/: Wiremann_aarch64.iss  Wiremann_x86_64.iss
src/: app.rs  errors.rs  logging.rs  main.rs  scanner_v2.rs  utils.rs  worker_config.rs
src/app/: events.rs  mod.rs  paths.rs  window.rs  workers.rs
src/audio/: engine.rs  mod.rs
src/cacher/: images.rs  io.rs  lyrics.rs  mod.rs  paths.rs  schema.rs
src/controller/: commands.rs  events.rs  handlers.rs  metadata.rs  mod.rs  player.rs  playlist.rs  state.rs
src/controller/handlers/: audio.rs  cacher.rs  image_processor.rs  lyrics.rs  mod.rs  scanner.rs  system_integration.rs
src/image_processor/: mod.rs
src/lyrics_manager/: mod.rs
src/lyrics_manager/providers/: lrclib.rs  youly.rs
src/queue/: mod.rs
src/scanner/: cache.rs  metadata.rs  mod.rs
src/system_integration/: mod.rs
src/ui/: animations.rs  assets.rs  commander.rs  global_keybinds.rs  helpers.rs  icons.rs  image_cache.rs  mod.rs  res_handler.rs  theme.rs  wiremann.rs
src/ui/components/: bounds_observer.rs  controlbar.rs  element_ext.rs  icons.rs  image_cache.rs  lyrics.rs  lyrics_metrics.rs  mod.rs  navbar.rs  queue.rs  scrollbar.rs  slider.rs  titlebar.rs  virtual_list.rs
src/ui/components/pages/: library.rs  mod.rs  player.rs  playlists.rs
src/ui/components/toasts/: mod.rs
src/ui/pages/playlists/: helpers.rs  mod.rs
